[package]
name = "gslt-rust"
version = "0.1.0"
authors = ["Flowing <shugo_k@flowing.tokyo>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
serde_derive = "1.0.104"