[package]
name = "gslt-rust"
version = "0.1.0"
authors = ["Flowing <shugo_k@flowing.tokyo>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
serde_derive = "1.0.104"
anyhow = "1.0.26"
ureq = "0.11.3"
url = "2.1.1"
